# log-vault-poc

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/application/: mod.rs  pipeline.rs  stages.rs
src/cli/: args.rs  mod.rs
src/domain/: errors.rs  mod.rs  models.rs  traits.rs
src/infrastructure/: mod.rs  parser.rs  reader.rs  writer.rs
