[package]
name = "log-vault"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "log-vault"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialización (para output JSON y parsing de logs JSON)
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Manejo de fechas
chrono = { version = "0.4", features = ["serde"] }

# Manejo de errores
thiserror = "1"

# CLI
clap = { version = "4", features = ["derive"] }

# Async traits
async-trait = "0.1"

# Expresiones regulares
regex = "1"

[dev-dependencies]
tokio-test = "0.4"
